--- a/quatorze/package.json
+++ b/quatorze/package.json
@@ -15,6 +15,7 @@
     "@microsoft/sp-property-pane": "1.12.1",
     "@microsoft/sp-webpart-base": "1.12.1",
     "@pnp/graph": "^3.5.1",
+    "@pnp/logging": "^3.5.1",
     "@pnp/sp": "^3.5.1",
     "office-ui-fabric-react": "7.156.0",
     "react": "16.9.0",
@@ -27,7 +28,7 @@
     "@microsoft/sp-tslint-rules": "1.12.1",
     "@microsoft/sp-module-interfaces": "1.12.1",
     "@microsoft/sp-webpart-workbench": "1.12.1",
-    "@microsoft/rush-stack-compiler-3.7": "0.2.3",
+    "@microsoft/rush-stack-compiler-4.2": "^0.1.2",
     "gulp": "~4.0.2",
     "ajv": "~5.2.2",
     "@types/webpack-env": "1.13.1"
